@@ -1,5 +1,11 @@
 2010-04-29  Sergio Martin  <sergio.martin@artica.es>
 
+	* godmode/setup/gis_step_2.php: Fixed the creation 
+	of map connection without name and without type
+	of connection. Bug:2993713
+
+2010-04-29  Sergio Martin  <sergio.martin@artica.es>
+
 	* godmode/servers/manage_recontask.php: Fixed the creation
 	of recon task without name and network. Also, the network 
 	is checked by the following regular expression 
